Brought older colors back and fixed some layout issues on the work accordions.

--- a/assets/css/_input.scss
+++ b/assets/css/_input.scss
@@ -26,7 +26,7 @@ form {
     border: none;
     padding: 0.4rem 1rem;
     font-family: inherit;
-    background: $main_blue;
+    background: $blue__med;
     color: $white;
     font-size: 16px;
     z-index: 1;
