--- a/assets/css/_navbar.scss
+++ b/assets/css/_navbar.scss
@@ -25,7 +25,7 @@ nav.navbar {
     font-size: 1.8rem;
     letter-spacing: 1px;
     cursor: pointer;
-    font-weight: 600;
+    font-weight: 100;
     @include mobile {
       font-size: 1.5rem;
     }
