--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -11,6 +11,34 @@ $gray__light: rgb(209, 209, 209);
 $new_blue: #4a7984;
 $new_blue_2: #336f7c;
 
+$blue__dark: #1b1b20;
+$blue__med: #3d3d5a;
+$blue__light: #d8d8ee;
+$blue__light-x: #e7e7f1;
+$white: #f3f3f3;
+$gray: rgb(146, 146, 146);
+$gray__light: rgb(209, 209, 209);
+
+$navbg: #f3f3f3;
+
+
+$about: #ececec;
+$skills: #f1f1f1;
+$work: #fff;
+$workitem: #f1f1f1;
+$resume: #e0e250;
+$interests: #ececec;
+$interests2: #919191;
+$text: #1b1b20;
+$red: #fef9a7;
+// real $green: #52c284;
+$green: #fef9a7;
+// real $blue: #3c62e0;
+$blue: #fef9a7;
+
+$section_shadow: 2px 2px 12px -2px rgba($blue__med,0.2);
+$project_shadow: 2px 2px 14px -2px rgba($blue__med,0.2);
+
 $main_blue: #356D7A; // main blue
 
 $navbg: #f3f3f3;
