--- a/assets/css/style2.scss
+++ b/assets/css/style2.scss
@@ -8,6 +8,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  line-height: normal;
   body {
     font-family: 'Tajawal', arial, sans-serif;
     width: 950px;
